[tool.poetry]
name = "teste-typer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "teste_typer"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.4.2"
typer = "^0.9.0"
trio = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
